# jira-mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  route-configs.example.yaml
.github/workflows/: ci.yml
jira_mcp/: __init__.py  __main__.py  auth.py  config.py  jira_openapi_spec.json  server.py  settings.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_cli.py  test_e2e.py  test_server.py
tests/unit/: __init__.py  conftest.py  test_auth.py  test_config.py  test_main.py  test_server.py  test_settings.py
